--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ img.zip
 img/*.png
 img/*.jpg
 img/template riek.psd
-txts/first.tst
+txts/first.txt
 
 # Created by https://www.toptal.com/developers/gitignore/api/node
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
